tests/snapshots/compile__wgsl_generate_grid_unconnected.snap
---
source: tests/compile.rs
expression: wgsl
---

struct Uniforms {
    u_resolution: vec2f,
    u_time: f32,
    u_control_grid1_background: vec4f,
    u_control_grid1_cellsX: f32,
    u_control_grid1_cellsY: f32,
    u_control_grid1_foreground: vec4f,
    u_control_grid1_offsetX: f32,
    u_control_grid1_offsetY: f32,
    u_control_grid1_smoothing: f32,
    u_control_grid1_thickness: f32,
    u_control_mix4_amount: f32,
    u_control_rgba3_a: f32,
    u_control_rgba3_b: f32,
    u_control_rgba3_g: f32,
    u_opt_mix4_curve: i32,
    u_opt_mix4_method: i32,
}
@group(0) @binding(0) var<uniform> u: Uniforms;

fn grid1_color(uv: vec2f) -> vec4f {
    let cells = vec2f(u.u_control_grid1_cellsX, u.u_control_grid1_cellsY);
    let thickness = u.u_control_grid1_thickness;
    let smoothing = u.u_control_grid1_smoothing;
    let cell = fract((uv + vec2f(u.u_control_grid1_offsetX, u.u_control_grid1_offsetY)) * cells);
    let halfWidth = thickness * cells * 0.05;
    let blur = smoothing * cells * 0.05;
    let line = max(
        1.0 - smoothstep(halfWidth - blur, halfWidth + blur, cell),
        1.0 - smoothstep(halfWidth - blur, halfWidth + blur, 1.0 - cell)
    );
    let mask = max(line.x, line.y);
    return mix(u.u_control_grid1_background, u.u_control_grid1_foreground, mask);
}

fn grid1_mask(uv: vec2f) -> f32 {
    let cells = vec2f(u.u_control_grid1_cellsX, u.u_control_grid1_cellsY);
    let thickness = u.u_control_grid1_thickness;
    let smoothing = u.u_control_grid1_smoothing;
    let cell = fract((uv + vec2f(u.u_control_grid1_offsetX, u.u_control_grid1_offsetY)) * cells);
    let halfWidth = thickness * cells * 0.05;
    let blur = smoothing * cells * 0.05;
    let line = max(
        1.0 - smoothstep(halfWidth - blur, halfWidth + blur, cell),
        1.0 - smoothstep(halfWidth - blur, halfWidth + blur, 1.0 - cell)
    );
    let mask = max(line.x, line.y);
    return mask;
}

fn rgba3_output(uv: vec2f) -> vec4f {
    return vec4f(grid1_mask(uv), u.u_control_rgba3_g, u.u_control_rgba3_b, u.u_control_rgba3_a);
}

fn mix4_output(uv: vec2f) -> vec4f {
    let a = grid1_color(uv);
    let b = rgba3_output(uv);
    let amt = clamp(u.u_control_mix4_amount, 0.0, 1.0);
    let f = select(
        amt,
        clamp(0.5 + 0.5 * tan(clamp(2.0 * amt - 1.0, -0.999, 0.999) * 1.5707963), 0.0, 1.0),
        u.u_opt_mix4_curve == 1);
    let lum = dot(a.rgb, vec3f(0.299, 0.587, 0.114));
    let m = u.u_opt_mix4_method;
    if (m == 1) {
        return select(a, b, lum < f);
    } else if (m == 2) {
        return select(a, b, lum > 1.0 - f);
    } else {
        return mix(a, b, f);
    }
}

@fragment
fn fs_main(@builtin(position) frag_coord: vec4f) -> @location(0) vec4f {
    let screenUV = frag_coord.xy / u.u_resolution;
    let aspectRatio = u.u_resolution.x / u.u_resolution.y;
    let uv = vec2f((2.0 * screenUV.x - 1.0) * aspectRatio, 2.0 * screenUV.y - 1.0);
    return mix4_output(uv);
}
