tests/snapshots/compile__wgsl_generate_lineargradient_unconnected.snap
---
source: tests/compile.rs
expression: wgsl
---

struct Uniforms {
    u_resolution: vec2f,
    u_time: f32,
    u_control_lineargradient1_angle: f32,
    u_control_lineargradient1_center: f32,
    u_control_lineargradient1_endColor: vec4f,
    u_control_lineargradient1_frequency: f32,
    u_control_lineargradient1_offset: f32,
    u_control_lineargradient1_startColor: vec4f,
}
@group(0) @binding(0) var<uniform> u: Uniforms;

fn lineargradient1_output(uv: vec2f) -> vec4f {
    let angleRad = (u.u_control_lineargradient1_angle) * 2.0 * PI;
    let dir = vec2f(cos(angleRad), sin(angleRad));
    let raw = (dot(uv, dir) - (u.u_control_lineargradient1_center)) * (u.u_control_lineargradient1_frequency) + (u.u_control_lineargradient1_offset);
    let t = clamp(raw, 0.0, 1.0);
    return mix(u.u_control_lineargradient1_startColor, u.u_control_lineargradient1_endColor, t);
}

@fragment
fn fs_main(@builtin(position) frag_coord: vec4f) -> @location(0) vec4f {
    let screenUV = frag_coord.xy / u.u_resolution;
    let aspectRatio = u.u_resolution.x / u.u_resolution.y;
    let uv = vec2f((2.0 * screenUV.x - 1.0) * aspectRatio, 2.0 * screenUV.y - 1.0);
    return lineargradient1_output(uv);
}
